crates/wdl-analysis/tests/validation/empty-struct/source.errors
error: struct `Test` must have at least one declared member
  ┌─ tests/validation/empty-struct/source.wdl:5:8
  │
5 │ struct Test {
  │        ^^^^ this struct cannot be empty

