crates/wdl-analysis/tests/validation/empty-struct/source.wdl
# This is a test of a having an empty struct

version 1.1

struct Test {
}
